--- a/webApp/index.html
+++ b/webApp/index.html
@@ -19,6 +19,13 @@
 <input type="button" id="testPop2" value="点击pop弹框加载iframe">
 <div></div>
 <input type="button" id="testConfirm" value="点击confirm弹框">
+<div></div><div></div>
+<input type="button" id="testLoadStat1" value="加载test.js">
+<input type="button" id="testLoadStat2" value="加载test.css">
+<input type="button" id="testLoadStat3" value="加载test1.js,test2.js">
+<input type="button" id="testLoadStat4" value="加载['test1.js', 'test2.css', 'test9.js', 'test9.Js', 'test111.CSS']">
+<input type="button" id="testLoadStat5" value="'test41.js', 'aa/ss/ddd/test141.CSS'">
+
 
 <script src="public/js/libs/jquery-1.9.1.min.js"></script>
 <script src="public/js/libs/require.min.js"></script>
